k8s/graphql-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: graphql-service
  name: graphql-service
  namespace: microservices
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: graphql-service
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: graphql-service
    spec:
      containers:
        - image: nrt.ocir.io/nrcmxxv7sjse/ec_service_test:graphql-service
          name: graphql-service
          ports:
            - containerPort: 80
              protocol: TCP
      restartPolicy: Always
