k8s/kafka-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: kafka-api
  name: kafka-api
  namespace: microservices
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: kafka-api
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: kafka-api
    spec:
      containers:
        - env:
            - name: APP_PORT
              value: "8001"
            - name: KAFKA_BOOTSTRAP_SERVERS
              value: kafka:9092
          image: nrt.ocir.io/nrcmxxv7sjse/ec_service_test:kafka-api-v2
          name: kafka-api
          ports:
            - containerPort: 8001
              protocol: TCP
      restartPolicy: Always
