k8s/kafka-ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: kafka-ui
  name: kafka-ui
  namespace: microservices
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: kafka-ui
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: kafka-ui
    spec:
      containers:
        - env:
            - name: KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS
              value: kafka:9092
            - name: KAFKA_CLUSTERS_0_NAME
              value: local
          image: provectuslabs/kafka-ui:latest
          name: kafka-ui
          ports:
            - containerPort: 8080
              protocol: TCP
      restartPolicy: Always
