k8s/kafka-worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: kafka-worker
  name: kafka-worker
  namespace: microservices
spec:
  replicas: 2
  selector:
    matchLabels:
      io.kompose.service: kafka-worker
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: kafka-worker
    spec:
      containers:
        - env:
            - name: KAFKA_BOOTSTRAP_SERVERS
              value: kafka:9092
          image: nrt.ocir.io/nrcmxxv7sjse/ec_service_test:kafka-worker
          name: kafka-worker
      restartPolicy: Always
