k8s/workflow-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: workflow-service
  name: workflow-service
  namespace: microservices
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: workflow-service
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: workflow-service
    spec:
      containers:
        - env:
            - name: TEMPORAL_ADDRESS
              value: temporal:7233
          image: nrt.ocir.io/nrcmxxv7sjse/ec_service_test:workflow-service
          name: workflow-service
          ports:
            - containerPort: 50060
              protocol: TCP
      restartPolicy: Always
