k8s/graphql-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: graphql-service
  name: graphql-service
  namespace: microservices
spec:
  ports:
    - name: "graphql-service"
      port: 80
      targetPort: 80
  selector:
    io.kompose.service: graphql-service
