k8s/grpc-cart-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: grpc-cart-service
  name: grpc-cart-service
  namespace: microservices
spec:
  ports:
    - name: "50051"
      port: 50051
      targetPort: 50051
  selector:
    io.kompose.service: grpc-cart-service
