k8s/grpc-product-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: grpc-product-service
  name: grpc-product-service
  namespace: microservices
spec:
  ports:
    - name: "50052"
      port: 50052
      targetPort: 50052
  selector:
    io.kompose.service: grpc-product-service
