k8s/kafka-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: kafka
  name: kafka
  namespace: microservices
spec:
  ports:
    - name: "kafka"
      port: 9092
      targetPort: 9092
  selector:
    io.kompose.service: kafka
