k8s/kafka-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: kafka-ui
  name: kafka-ui
  namespace: microservices
spec:
  ports:
    - name: "8081"
      port: 80
      targetPort: 8080
  selector:
    io.kompose.service: kafka-ui
