k8s/kafka-worker-service.yaml
# 追加
apiVersion: v1
kind: Service
metadata:
  name: kafka-worker
  namespace: microservices
  labels:
    io.kompose.service: kafka-worker
spec:
  selector:
    io.kompose.service: kafka-worker
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
