k8s/temporal-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: temporal
  name: temporal
  namespace: microservices
spec:
  ports:
    - name: "7233"
      port: 7233
      targetPort: 7233
  selector:
    io.kompose.service: temporal
